--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky",
+    "test": "echo \"No tests yet - will add later\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,css,scss}\""
   },
   "dependencies": {
     "@remixicon/react": "^4.8.0",
@@ -19,17 +22,18 @@
     "sass": "^1.97.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.23",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "vite": "^7.2.4"
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.7.4",
+    "sass": "^1.86.3",
+    "vite": "^7.3.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,css,scss}": [
+      "prettier --write",
+      "npm run lint --fix"
+    ]
   }
 }
