--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^4.6.2",
     "husky": "^9.1.7",
+    "jsdom": "^27.4.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.7.4",
     "prop-types": "^15.8.1",
     "sass": "^1.86.3",
     "vite": "^7.3.0",
-    "vitest": "^4.0.16",
-    "@vitejs/plugin-react": "^4.6.2"
+    "vitest": "^4.0.16"
   },
   "lint-staged": {
     "*.{js,jsx,css,scss}": [
