--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "veauly",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "prepare": "husky",
-    "test": "vitest",
+    "test": "jest",
     "format": "prettier --write \"src/**/*.{js,jsx,css,scss}\""
   },
   "dependencies": {
@@ -18,24 +17,29 @@
     "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0",
-    "sass": "^1.97.1"
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.6",
+    "@babel/preset-env": "^7.28.6",
+    "@babel/preset-react": "^7.28.5",
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^4.6.2",
+    "babel-jest": "^30.2.0",
     "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jsdom": "^27.4.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.7.4",
     "prop-types": "^15.8.1",
-    "sass": "^1.86.3",
-    "vite": "^7.3.0",
-    "vitest": "^4.0.16"
+    "sass": "^1.97.2",
+    "vite": "^7.3.0"
   },
   "lint-staged": {
     "*.{js,jsx,css,scss}": [
